task: setup user datastore
