# backend/api/swagger.yml
@@ -65,7 +65,7 @@ definitions:
           $ref: "#/definitions/FieldError"
 
   ############################################
-  # User 
+  # User
   ############################################
   LinkedAccount:
     type: object
@@ -80,11 +80,11 @@ definitions:
         format: date-time
       updatedAt:
         type: string
-        format: date-time  
-  
+        format: date-time
+
   User:
     type: object
-    properties: 
+    properties:
       id:
         type: string
         readOnly: true
@@ -101,7 +101,7 @@ definitions:
         type: string
       accounts:
         type: array
-        items: 
+        items:
           $ref: "#/definitions/LinkedAccount"
       createdAt:
         type: string
@@ -109,7 +109,7 @@ definitions:
       updatedAt:
         type: string
         format: date-time
-  
+
 
 # Global Parameters
 parameters:
@@ -215,6 +215,7 @@ paths:
     post:
       tags:
         - User
+      operationId: CreateUserV1
       summary: create a new user
       responses:
         201:
@@ -237,14 +238,15 @@ paths:
         required: true
         type: string
         description: the id of the user
-    
+
     get:
       tags:
         - User
       summary: get a user by id
+      operationId: GetUserByIDV1
       responses:
         200:
-          description: a 
+          description: a
           schema:
             $ref: "#/definitions/User"
         400:
